<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f252e"
    tools:context=".Scene06">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"
                android:backgroundTint="#7c818c"
                android:onClick="returnDetail"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/dados_do_comprador"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/deep_yellow"
                android:textSize="34sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/dados_cadastrais"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/deep_yellow"
                android:textSize="34sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/e_mail"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/email_editText_cadastro"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:background="@drawable/input_text"
                android:hint="@string/exemplo_exemplo_com_br"
                android:textColorHint="@color/white"
                android:padding="14dp"
                android:autofillHints="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:text="@string/nome_completo"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/nome_editText_cadastro"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:background="@drawable/input_text"
                android:hint="@string/seu_nome_completo_aqui"
                android:textColorHint="@color/white"
                android:padding="14dp"
                android:autofillHints="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:text="@string/cpf"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/cpf_editText_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:textColorHint="@color/white"
                android:hint="@string/cpf_mask"
                android:inputType="number"
                android:background="@drawable/input_text"
                android:padding="14dp"
                android:autofillHints="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:text="@string/telefone"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/numero_editText_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:background="@drawable/input_text"
                android:hint="@string/number_mask"
                android:inputType="number"
                android:textColorHint="@color/white"
                android:padding="14dp"
                android:autofillHints="" />
        </LinearLayout>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="260dp"
        android:layout_height="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="25dp"
        android:onClick="payment"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/comum_button"
            android:text="@string/ir_para_pagamento"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>