<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f252e"
    tools:context=".Scene07">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="245dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"
                android:backgroundTint="#7c818c"
                android:onClick="returnDetail"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="none"
                android:text="@string/dados_do_pagamento"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/deep_yellow"
                android:textSize="28sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="Pagamento"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/deep_yellow"
                android:textSize="34sp" />


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_black"
                android:columnCount="2"
                android:padding="10dp"
                android:rowCount="4">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/nome_do_titular"
                    android:textAlignment="center"
                    android:textColor="#7c818c"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/cartao_titular_nome"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints=""
                    android:background="@drawable/input_text"
                    android:hint="@string/mais_de_6_caracteres"
                    android:inputType="text"
                    android:padding="14dp"
                    android:textColorHint="@color/white" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/numero_do_cart_o"
                    android:textAlignment="center"
                    android:textColor="#7c818c"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/cartao_titular_numero"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints=""
                    android:background="@drawable/input_text"
                    android:hint="@string/card_mask"
                    android:inputType="number"
                    android:padding="14dp"
                    android:textColorHint="@color/white" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/data_de_validade"
                    android:textAlignment="center"
                    android:textColor="#7c818c"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/cartao_titular_data"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints=""
                    android:background="@drawable/input_text"
                    android:hint="@string/date_mask"
                    android:inputType="date"
                    android:padding="14dp"
                    android:textColorHint="@color/white" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/cvc"
                    android:textAlignment="center"
                    android:textColor="#7c818c"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/cartao_titular_cvc"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints=""
                    android:background="@drawable/input_text"
                    android:hint="@string/cvc"
                    android:inputType="number"
                    android:padding="14dp"
                    android:textColorHint="@color/white" />
            </GridLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_error_24"
            android:drawableTint="@color/light_yellow"
            android:onClick="terms"
            android:paddingHorizontal="10dp"
            android:text="@string/termos_de_condi_es_ao_clicar_em_reservar_voc_confirma_que_leu_entendeu_e_concordou_com_nossos_termos_gerais_termos_da_apolice_e_os_termos_de_aluguel_da_locadora"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="-58dp"
            tools:layout_editor_absoluteY="769dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="186dp"
        android:layout_height="0dp"
        android:layout_marginTop="110dp"
        android:onClick="closeOrder"
        app:cardCornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/comum_button"
            android:gravity="center"
            android:text="Reservar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>