<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1f252e"
    tools:context=".Scene04">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"
                android:onClick="returnReserva"
                android:backgroundTint="#7c818c"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/carros_dispon_veis"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/deep_yellow"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_filter_small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gold"
                android:onClick="filter"
                android:tag="small"
                android:text="@string/pequeno"
                android:textAllCaps="true"
                android:textColor="#616161"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_filter_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gold"
                android:onClick="filter"
                android:tag="medio"
                android:text="@string/medium"
                android:textAllCaps="true"
                android:textColor="#616161"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_filter_suv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gold"
                android:onClick="filter"
                android:tag="suv"
                android:text="@string/suv"
                android:textAllCaps="true"
                android:textColor="#616161"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_filter_premium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/gold"
                android:onClick="filter"
                android:tag="premium"
                android:text="@string/premium"
                android:textAllCaps="true"
                android:textColor="#616161"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/car_list_recycle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/car_list_item">
                </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>