<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f252e"
    tools:context=".Scene05">

    <LinearLayout
        android:id="@+id/Linear_01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"
                android:backgroundTint="#7c818c"
                android:onClick="returnAvalible"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/detalhes_da_oferta"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/deep_yellow"
                android:textSize="32sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/car_image"
                android:layout_width="171dp"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="27dp"
                tools:srcCompat="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/car_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/titulo_do_veiculo"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#7c818c"
                    android:textSize="24sp" />

                <GridLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:columnCount="2"
                    android:paddingHorizontal="15dp"
                    android:rowCount="4">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/portas"
                        android:textAlignment="center"
                        android:textColor="#7c818c"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/car_door_amount"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="50dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="#7c818c"
                        android:textSize="26sp" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/malas"
                        android:textAlignment="center"
                        android:textColor="#7c818c"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/car_offer_bagged_amount"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="50dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="#7c818c"
                        android:textSize="26sp" />

                </GridLayout>
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/detalhes_da_oferta"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/deep_yellow"
            android:textSize="34sp" />


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:paddingHorizontal="15dp"
            android:rowCount="1"
            android:stretchMode="columnWidth">


        </GridLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:paddingHorizontal="15dp"
        android:text="@string/cancelamento_grat_s_at_48_horas_antes_da_retirada_n"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Linear_01" />

    <Button
        android:id="@+id/button"
        android:layout_width="127dp"
        android:layout_height="91dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/green"
        android:onClick="order"
        android:text="@string/seguir_c_prote_o"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>